# raccoonz

./: .gitignore  README.md  pyproject.toml
docs/: API.md  architecture.md  bin.md  data-flow.md  glossary.md  how-it-works.md  index.md  roadmap.md
src/raccoonz/: bin.py  config.py  constants.py  errors.py  object.py  raccoon.py  record.py
src/raccoonz/bins/: imdb.yaml  workbc.yaml
src/raccoonz/config/: bin_loader.py  models.py
src/raccoonz/constants/: bin_keys.py  config.py
src/raccoonz/fetcher/: factory.py
src/raccoonz/fetcher/models/: base.py  playwright.py  requests.py
src/raccoonz/nest/imdb/data/movie/id=tt0120737/: 20260331_184408.yaml
src/raccoonz/nest/imdb/raw/movie/id=tt0120737/: 20260331_182010.html  20260331_183853.html  20260331_184116.html  20260331_184408.html  20260331_184534.html  20260331_185019.html
src/raccoonz/parser/: factory.py
src/raccoonz/parser/models/: base.py  bs4.py
src/raccoonz/runtime/: runtime_registry.py
src/raccoonz/serve/: server.py  support.py
src/raccoonz/sniff/: sniffer.py
src/raccoonz/storage/: bag.py  filesystem.py
src/raccoonz/utils/: keys.py  time.py
