[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "raccoonz"
version = "0.1.0"
description = "Raccoonz library"
authors = [{ name = "Valentin Venom" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
	"playwright",
    "pyyaml",
	"typer"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]